--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ plugins {
     id 'jacoco'
     id 'com.github.sherter.google-java-format' version '0.8'
     id 'maven-publish'
-    id 'org.ajoberstar.grgit' version '4.1.0'
+    id 'org.ajoberstar.grgit' version '4.1.1'
 }
 println("Notice: current gradle version is " + gradle.gradleVersion)
 // Additional attribute definition
@@ -19,6 +19,7 @@ ext {
     guavaVersion = "29.0-jre"
     commonsCollections4Version = "4.4"
     springVersion = "4.3.27.RELEASE"
+    fastjsonVersion = "1.2.76"
 }
 
 archivesBaseName = 'java-sdk-demo'
@@ -88,6 +89,8 @@ dependencies {
     compile ("com.google.guava:guava:${guavaVersion}")
     compile ("org.apache.commons:commons-collections4:${commonsCollections4Version}")
     compile spring
+    compile fileTree(include: ['*.jar'], dir: 'dbft')
+    compile ("com.alibaba:fastjson:${fastjsonVersion}")
 }
 
 configurations.all {
@@ -127,6 +130,10 @@ jar {
         copy {
             from file('src/test/resources/')
             into 'dist/conf'
+        }
+        copy {
+            from 'dbft'
+            into 'dist/dbft'
         }
     }
 }
